--- a/reactapp/src/components/phones/Phone.module.css
+++ b/reactapp/src/components/phones/Phone.module.css
@@ -13,9 +13,12 @@
 }
 .phoneCardTitle {
   font-size: 2.2rem;
+  font-weight: bolder;
 }
 .phoneCardView,
 .phoneCardViewDetail {
+  font-size: 1.1rem;
+  font-weight: bold;
   box-shadow: 0 0 15px #1e780e;
   background-color: transparent;
   opacity: 0.9;
