--- a/reactapp/src/components/phones/Phone.module.css
+++ b/reactapp/src/components/phones/Phone.module.css
@@ -77,6 +77,7 @@
 .phoneSubtitle {
   text-align: center;
   font-size: 1.8em;
+  margin-bottom: 1.2em;
 }
 .phoneInfoTitle h1,
 .phoneInfoTitle p {
